@@ -4,27 +4,17 @@ Hash: SHA256
 AUX dpkg-1.17.0-gzip-rsyncable.patch 291 SHA256 653215618c3713f0a03efba0d4606e6bbe0e51c02ccffae9caf988b0b6500b2f SHA512 c7e0d0f1417afe9bd76bcac7f1f54a775a2a328db558a4431580a4854a436fe1a054840284fb92d22bdcfd266cf5cca71a00e94f47379c9a1862eadad908ed5a WHIRLPOOL 5c4be3edc74fef092612c529e0ff4a8fed6ad96c929d2494afcc2d640ce2e2bff8826cea359ad1515320afd215d6d71394a1f7a0cd928d992937eb9517c41e66
 AUX dpkg-1.17.1-flags.patch 300 SHA256 b0be51022f576bc0867570192ce5871a0da4ca2a66a4e35bafe167d063d84723 SHA512 6dbede2fdde0e28f5e66d77f694a8aabe55b1395ba6a8d26a4808bbe2909cda00946c21a513bbe60b68e76f5669ef08139c72c036f9a16c095e7d702483ed9f4 WHIRLPOOL 66fa84b14d4e26778205c774929c1ef28e3f2ad344af236fecb2a53b1ec409c2a051368febc572f707cc6d18f2b6506d9f662763278b301f0b75fab2dcdaccfa
 DIST dpkg_1.17.23.tar.xz 4386124 SHA256 90c4af92fc248a7542cf6db1141d69b042130abd82781943b3c2608e78f860b5 SHA512 b0ebb6d072135f8eb0504084aab38d1f7366dd2bbf4a28a66f7fda5777236f56eb14dd43f8b5cd5ab8dd5d467e48b398221a271c2cb52360d09c7b7cec0e531a WHIRLPOOL cda6fab0c05e12a077a1c7c66883c85646b9f45ece209925947583a4f452f54750253249e21c2b650c13e57c4bfbb82caf807ab00a9163dd1db4bc289c874a04
-DIST dpkg_1.17.24.tar.xz 4388276 SHA256 afd60233ef090aa5a4d9e181b8986d1f5deb23a3428a2309b6b4ec448d539eac SHA512 4ec8e55f765cd6718f9ea76ac4d0ba37d007a94a06a9ce91a5958feb4641c93dca4b5da8de2e7ddd0775e7e0a00ac3d9f11445489249f724edee6bc9c3a31332 WHIRLPOOL 37113575147e9f8030b0845353596a6e193370cc0b13b785a5a37d08762c27afae857f554ed4da09c4aa1146b6002533f72da7b8ab681ca32292bbc0b83cc3a8
 DIST dpkg_1.17.25.tar.xz 4407792 SHA256 07019d38ae98fb107c79dbb3690cfadff877f153b8c4970e3a30d2e59aa66baa SHA512 6a4b45c0f59cd11fc104d954ab790dd7e11e650cd6dde303a664023a04bf6fbc49c878eaf00e27dd7f9bf5e79a92b3a5f5923d003942436758a3027364a0b7c7 WHIRLPOOL 6ed2d8a645787a83f431803214cce9b1c7516c4083ffe651deb7c2f8b641b85d3a17271030286155a985dfd0046fbd584d2d750ab8954e8e5af74085d7651bd2
+DIST dpkg_1.18.0.tar.xz 4330304 SHA256 7b156fbeed5bbfb8aa546a18badb46e471b65fa00777ccd8d7e3bbce002f225a SHA512 8d51082707929d682a04e74843ba941ed66f992d592453e73bd267ba0cfe0c30e07c48c1188519c58d93ca9928631de7c915d34d126e07b81447d3380bd4fc89 WHIRLPOOL d9816e9ba6be50c3ffa29f1ff138f4cecb837b42803780f23217e5f876822cb89a482196df9c2554973c7ac5b236be97355a7f4c6aa56adcb5daf104f05ba2c8
 EBUILD dpkg-1.17.23.ebuild 2484 SHA256 657348cdab5985b3d338d40afcde1b8dec71ece450770e1a471fb0d7e364915a SHA512 0bca167fd0ba3d09b001aec150c14087d62b9fddab92f302031355ee0aa21463ed2d19c7785ca94b62562aeb11b0523321761f3f6bda844bb240d05a45a93a5e WHIRLPOOL 527be3d1ec3dc00a46c6ac628cf6892536bde6e082f161c624b3102019fe81f7549cb77c19adcaee903b844fee32894d94d2352cf800086ef741c8c237094c48
-EBUILD dpkg-1.17.24.ebuild 2492 SHA256 4fd8ab3a6c1f8d919f380c498557bbc671f34a2c14bc527768cc9c9f60d40bc9 SHA512 72e86b9df81d41b518ad6bdeb1299be1c2977d96f05015f51deca6b774f6350cf4d308f2a235bf5b144e113a7e251108730859ef7347bb3455e93a88bbafedad WHIRLPOOL 3a32bb725497381e0b0cbcac7542165436051bd4ca4f28c56f9f499812b1719c5f4f5a4ea1db5c380743ad982ab3112d37cb2a06585a84f2b5a9361285d89927
 EBUILD dpkg-1.17.25.ebuild 2484 SHA256 ae72822593aca70ea17ef58030c686d73517dbb0f8baba0dde705e4281956c92 SHA512 531cbfa1da16b106f87d1937529703fdc0992e249c37b71f4f9fc5d6a30467565b448a94591e35963d0a5dfe660dedde31d78edfb5f626eeb00d8276fb7f2592 WHIRLPOOL 6c97f36dd659c486377c9730074876ed71adfdf577ad2a0aacbb48e3a10614faf8718a669235bda430c6b1f3a16ddc348b0e8361568171841fd9161d6bf57d91
-MISC ChangeLog 41192 SHA256 411d62680577733406c0682e0b7698625330de3a382a2ae29934539155b52a90 SHA512 b811d8322d26d0a46b6bef65eb19a8e628ecefbca509a5ee0ca7c19055e4ab265d6cd6deae5b1029ccae81a09b4512d0070e0023cb93e674f0dd6a71c7a18a2f WHIRLPOOL 87629755db9a66e861942785dd3aeb73a829c968d30640a406e3d8db979b390b3af2cfc7bdd1f2096c4c9ca28cef0aa034f2d4cadaad8cd778ee863b8d8e47e7
+EBUILD dpkg-1.18.0.ebuild 2491 SHA256 c54c667ef86de26f60d9d40a4ee955c6265f486be475bd1fa20bb568c94ff13b SHA512 7cfff46b71e6a6b09602af69122e66611b790609ea133956dd15a6736978a6e0b13a0426ba04df230852f512ee6ace18151dbd967478c14040bf6e0ef8aedc01 WHIRLPOOL 070e3be380ff539a5a7e19622fb62342d58564bd9ecaf2204ceb5837ed1819fbc31ada08c2f673548a1b6e6459413d6f8b5fe36a531ab53837844c5317a2f05d
+MISC ChangeLog 41329 SHA256 c311bfe175ee3e68b506641d2afbe1c29daabf07458d958d3496f7ae3738ae5a SHA512 940a6eaa6482ae1d37b9b2e3cd876c41bf838207ffff76e6555ad47678eee9925f4410048aad940dd517649c00bf0000a1bbf7d1892b7847f513272030c45269 WHIRLPOOL 16c03d642d551c7b80aa0ffcdfedc3c15e6cc79ff9ff836cbf5c47b4377c5db60fe89434e8e01f8c4cce0b7d7860dc8b12c08caf6f51f2184b281a9afcaf3db8
 MISC metadata.xml 243 SHA256 43ad915474628453e4f0257b8184ae2628113c0a8519b3a3e038e885c3aec7e3 SHA512 1153fdbd05486ee938a17e51c2f5aade083c05beff04ada67acccf12b4e1bfc04ac662c921452076b81626f0cfc873518b23b69f003d8df8e3d9f3952828da2e WHIRLPOOL f2b1ce108d5c9f22c81fca2079d928cbadb37350f8aeadce236ad273f86892e01346b6b6928eea67af5a3d960ab6b7e42b02c74e97441e9a6bd89cd0c8f340f7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVPzbnAAoJELp701BxlEWfErcP/0+pKx22BBQs1FE9z48PU2/0
-m9YWfZuVpXV+biyauC4Q+kH++guFhmfObNmf9RYfgjxGKwSk93p4SBPo6TDdg9Rz
-B+ukc1Gsu6oB6LLe8Q1FKxqvLR2wO2K7VhgAT1xlv+tuNrBFjJBoWOJNDr2exuqX
-rBcLhTSbCJNrX92vXMZNx4zQevwdwCTCAfw5/SXsozlMA8ZN0VHiHvF3hun/kuZs
-k61xSfep8aagJtUQPxaUZ3/ey+nx5LCTsgO5UPPkVXAzRpheYHI389TSRrwNEFjB
-5htM20e70IMiKeJQ14k9HIuM0jg8sot9WuUp0qmg/tGxpUgnJO5WHNfiruOf2Hpm
-5LcvTTeL3UinoyD04CHo8x6q4igxqYAnZXffDr9YR1wyok38rVMOyhXcwjgoKQS9
-QhWr/9yvXWHrgQQEobsCUa0ND6M0owr1AXq/kjrN3nELIaaTnmkK2UikA/WN/sn5
-JKs1R3kNDltnG5Sh5/9D6UwW5KQou1L65IPT7TuBln3l7VgGSvGoL7I7JDBSa+5I
-5xtLRL3BYPIPAjPFGkj9NAFlsEtQ4SgzY2Ppr4WYym5UFYNB63rAyeg7wxtstGYQ
-tnfh9ANFkJvXhnyIrCykW9BwbispYAYntvgo28iXv8lkioFBhKjMxcl9XBSWrcbP
-pUeSwrKqsM6BsSTy7RdA
-=Ew4r
+iEYEAREIAAYFAlVau+QACgkQVWmRsqeSphMd1wCeNMGIgkJw/0dW3V/YvDCZHmZl
+qYcAmweZSvp9gM22rlX02ka/eMek697G
+=eFvE
 -----END PGP SIGNATURE-----
