@@ -3,15 +3,17 @@ Hash: SHA256
 
 DIST debootstrap_1.0.67.tar.gz 61863 SHA256 0a12e0a2bbff185d47711a716b1f2734856100e8784361203e834fed0cffa51b SHA512 751cfabdcefa6de099f12377f4e5ac611d97952197040c8d194abc0ac8f3abd59c21110828592bfa2c7a92299db57fe8c6ee0991e11894470f444a71cfd25151 WHIRLPOOL 64acdd3bda9f901b90621a1ce26671075f1a24da748b00ffc1ef9d554fb6ef04bed964988679a168df9e82780a30876c48b6d381dcbe41bd9a7c0f5a8119b261
 DIST debootstrap_1.0.68.tar.gz 61376 SHA256 1e59527019949a4dc58ba8cc7b6e92492eb4c7cba0a5bfc92fcf980b774bba7a SHA512 4855de0653110f5c223d3b30e717b2e602323b630d1a57ca68cfe9b178a46b665220bf773ee2cb4286e7a36238e2cd75decc1e8d78e126968551ccc5c11ea641 WHIRLPOOL f97bfed83014284688e97ee90138ef0a5a06e5d12aee0be02ffb4ac788398345141eee53db62fad59d4c4e52f57d1ecd36db9dfa6317952e91c8869e5b17281f
+DIST debootstrap_1.0.69.tar.gz 61843 SHA256 146aac21c3121b0af09fdc841e4fd3a13ce9f5d990f3ca1b56a61e61d77dbe11 SHA512 697a725bc881a43bae0f65c6a1b23f0710ed2e724a27df7650cc261aa9dada7b812ca4a899496b16ff9cd41fdc281c3636b6181a5a11cd0caf05391ab6dc86f3 WHIRLPOOL 2901637279afe52e634731b63e5e11b5a6b68c61b9a98386b750dc236514581f27d96f27164430d198d8d17c494f1484a8eb45307be3bd932d9ac8ed2fd5258f
 DIST devices.tar.gz 47835 SHA256 0d93f93c8b21160069d14e74f8f990a2e0e1e5a90dc828b29e6b3f5aa5829e48 SHA512 994ec8d72e3d52d2d872f7ff0da2336e4cbd3a5fa73bb6cdb9e06f5e7f5b8c69cea639c738fdba1186f382d6dcf62e7746fface664bfbd744aac24b16f034432 WHIRLPOOL 222963bb920e1311bc2f481bba04e49f386b60cce6ce0576424896277e0c4fc6a339d4403d587744c32b0bfb1db6391f200fa8d66117e3f21e1c12f35365d732
 EBUILD debootstrap-1.0.67.ebuild 1027 SHA256 f654ddb2524d52f5c5930904516d2f24f88a7c841ebb4512036b42728a5d9c64 SHA512 fd769bc435de3299b38b398610cefd0202f35e9c05f22022152170c4566db52776262346f9896d3e3b7051b1ec4a1bfe9811bce104d275fde9aaba63262e881a WHIRLPOOL f334a99c7671f86f5de1667616b87e51be10353e6df5d7eb96ac7df12f9f49635c125e669e6df11c3a69bc8f6ac1b8eeecee13b67bb1522491dc8f3166e91bb8
 EBUILD debootstrap-1.0.68.ebuild 1035 SHA256 271f58487946eda5370de91cfa654327ac8c0e7bd75138b3f403e65004236ef0 SHA512 71b04cf173d3b5772c078fee3919dc04b3164b4a624492184429bcac516346b3fdbdf3980449c9c8ed541ca9223074580e81c8d3cd2a55d77083ec70a8862943 WHIRLPOOL 367284bcccc80c2a2c418a9b5d7875e6d64d9b172102cbf405862484087ee91799a6833f0a0b5c788d728d3de5939d48639f5c94067ef4f767bd08ddd75fea63
-MISC ChangeLog 35311 SHA256 5ea643b5f54953a2aca641ec97a96a5e796b3f36b45a36ebb4b30da64f292d5a SHA512 e02f6ad9e6b1b46a379db6189bd4fed0f3947a5953631151f868c90bd6ff724d3c595beaf6eb229576ee1682023af39d685bc6f980eaf877c55b74e3f22fa945 WHIRLPOOL f30b5b358ffe2a206548914fa35320bb64bea33035a765c063b02f34513f3b40b40251d399b28f2420b1cf73828dbe05479197c42eab54598829f52ad5b1e10e
+EBUILD debootstrap-1.0.69.ebuild 1035 SHA256 f48bdcdb7b03c43ac88cbb392d16c630b20efc77781c2458e228d2d038d57675 SHA512 e70bde887a4b6d205b3dddbb1dffa7a06173c46d322c9ef376d94448233401ea78e96eb305b8453ad7f91770da2e1082d7e83771ddd0fd729dff5e7d835c2dc1 WHIRLPOOL c20a08da8d83531436d03d826c4ee7fe4ea1cf2c8153fe946c6d6263f785332c404905c38cc1db11e2274a7bf3cf8b6fe36fd9b21b0793ddddd9b10f518d1c71
+MISC ChangeLog 35438 SHA256 fdc12d3449965ddc604aafe8f06c3f3ddcbb7b45f8a1e31b6721c56c0cf87485 SHA512 6fab62c614ee9852019e42bd3a34702c6c8f19e892caadf78bed9029bb58c69629c33933e016bd20d999ad64fb4e825f52e4ed2ec3f0116b108ea6d5a384035e WHIRLPOOL be9ad1f976f983b9149ac996a5926266282b07aad7fa1818032860c430df8969cb3b2eae1f829bc769524fb59dfb318884a00085ed21a61df50678004d2ef2a0
 MISC metadata.xml 254 SHA256 2790aaa1752a64752fb0a90f28f292669aa359e1c1583ad3834746b55e86dbd2 SHA512 b8d3d7e0aaa35ea183b5b2978ed73ddaea52efe0f14ac2f45cbd64fd7d7a49383330ab3bf5f9777681df053584d5f392b6b6c22dbd778abfe39b8e0cc5915220 WHIRLPOOL 3403ae3dad61712af8ca7359fcb2124a509796fcc6a71d5a6c34cbc80ddcbdde48eddc03bbc559250b9bb818d2464b36143d17d98f21c6eacec34b6bda1ba048
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVYN9QACgkQVWmRsqeSphNydgCfe81nuAQvUcl0XWBNXJYesRMr
-HA8An3w1DD7l87gTuY0PvoS+lM4GSdiN
-=CIqF
+iEYEAREIAAYFAlVauQYACgkQVWmRsqeSphNahwCeMcB4zSw4z0vmfW4nu11MMzMe
+ZncAnipfZuzIuj4bAqQrx7+JGoyckvKR
+=fAji
 -----END PGP SIGNATURE-----
