@@ -8,6 +8,6 @@ KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc
 LICENSE=GPL-2
 RDEPEND=>=dev-lang/perl-5.6.0:= dev-perl/TimeDate >=sys-libs/ncurses-5.2-r7 bzip2? ( app-arch/bzip2 ) lzma? ( app-arch/xz-utils ) selinux? ( sys-libs/libselinux ) zlib? ( >=sys-libs/zlib-1.1.4 )
 SLOT=0
-SRC_URI=mirror://debian/pool/main/d/dpkg/dpkg_1.17.24.tar.xz
+SRC_URI=mirror://debian/pool/main/d/dpkg/dpkg_1.18.0.tar.xz
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=78cc7bfb40451861e1e0ac778ef284e8
+_md5_=726974571171b84a9a146fc9ede677fb
