@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/debootstrap
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.283 2015/05/17 06:40:19 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.284 2015/05/19 04:16:05 jer Exp $
+
+*debootstrap-1.0.69 (19 May 2015)
+
+  19 May 2015; Jeroen Roovers <jer@gentoo.org> +debootstrap-1.0.69.ebuild:
+  Version bump.
 
 *debootstrap-1.0.68 (17 May 2015)
 
