@@ -1,6 +1,12 @@
 # ChangeLog for app-arch/dpkg
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.325 2015/04/28 07:29:43 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.326 2015/05/19 04:28:19 jer Exp $
+
+*dpkg-1.18.0 (19 May 2015)
+
+  19 May 2015; Jeroen Roovers <jer@gentoo.org> -dpkg-1.17.24.ebuild,
+  +dpkg-1.18.0.ebuild:
+  Version bump.
 
   28 Apr 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.25.ebuild:
   Stable for alpha, wrt bug #546108
